# pre-commit-exec

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_exec/: command.py  shell.py
