[metadata]
name = pre_commit_exec
version = 0.1
description = Execute arbitrary commands frrom pre-commit.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/major0/pre-commit-exec
author = Mark Ferrell
author_email = major@homeonderanged.org
license = MIT
licens_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5

[options.packages.find]
excludes = *.yaml

[options.entry_points]
console_scripts =
	pre-commit-command = pre_commit_exec.command:main
	pre-commit-shell   = pre_commit_exec.shell:main

[bdist_whell]
universal = True
